# bingyan-MiniNginx

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_cn.md
.github/workflows/: c-cpp.yml  doxygen.yml
MiniNginx/: annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_1869909234ac3922b7f97d966e7c7bf8.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4d2baa67e7d4c9370bc6346280c512aa.html  dir_4d2baa67e7d4c9370bc6346280c512aa.js  dir_590ec47e266baa41949193d0a08739e5.html  dir_590ec47e266baa41949193d0a08739e5.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.js  dir_c94f27a8309bb127b9a0946786a105e4.html  dir_c94f27a8309bb127b9a0946786a105e4.js  dir_d93a1d4020dea85bb71b237545b5e722.html  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.html  doxygen-awesome.css  examples.html  examples.js  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  (+27 more)
MiniNginx/search/: all_0.js  (+137 more)
docs/: config_grammar.md
headers/: application.h  client.h  config.h  epoll.h  http_parser.h  route_states.h  server.h  socket_util.h
scripts/: build  configure
src/: application.cpp  application_config.cpp  application_module.cpp  config.cpp  epoll.cpp  http_parser.cpp  main.cpp  route_states.cpp  server.cpp
(+226 files in other folders)
